--- a/css/calander.css
+++ b/css/calander.css
@@ -3,6 +3,14 @@
   overflow-x: scroll;
 }
 
+.dsbl-dts {
+  cursor: not-allowed;
+  color: #DDD;
+font-size: 16px;
+font-weight: 400;
+text-decoration: line-through;
+}
+
 .d-m-y {
   width: 699px;
   padding: 8px;
@@ -43,6 +51,7 @@ line-height: 25.2px; /* 140% */
 .calander-weeks {
   display: grid;
   grid-template-columns: repeat(7 ,  1fr);
+  grid-auto-rows: 52px;
   /* font*/
   color: var(--BLACK, #444);
 font-family: "DM Sans";
