--- a/datepicker/calander.css
+++ b/datepicker/calander.css
@@ -49,7 +49,7 @@ background-color: aqua Im !important;
     gap: 72px;
     justify-content: center;
 }
-.container {
+.calamder-container {
     display: flex;
     flex-direction: column;
     gap: 20px;
