--- a/datepicker/month.css
+++ b/datepicker/month.css
@@ -21,7 +21,7 @@
     margin: 2rem;
 }
 
-.container {
+.calamder-container {
     width: 80%;
     max-width: 600px;
     background-color: #fff;
@@ -32,7 +32,7 @@
     border: 0.2px solid #8080805c;
 }
 
-.container > div {
+.calamder-container > div {
     margin-bottom: 15px;
 }
 
