--- a/css/style.css
+++ b/css/style.css
@@ -1140,7 +1140,7 @@ ul.cd-highlights b {
   backdrop-filter: blur(40px);
   width: 100%;
   display: flex;
-  padding: 16px;
+  padding: 17px;
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -1162,7 +1162,7 @@ ul.cd-highlights b {
 .leftSideLoginEntry .gapedDiv button {
   color: #444;
   margin-bottom: 24px;
-  padding: 12px 24px;
+  padding: 17px 24px;
   border-radius: 16px;
   border: 1px solid rgba(234, 235, 237, 0.8);
   background: #FCFCFC;
@@ -1180,6 +1180,13 @@ ul.cd-highlights b {
 }
 .leftSideLoginEntry .gapedDiv button div {
   width: 50px;
+}
+.leftSideLoginEntry .gapedDiv button p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-left: -50px;
 }
 
 .leftSideLoginEntry .orClass {
