--- a/css/homepage.css
+++ b/css/homepage.css
@@ -315,79 +315,76 @@
   letter-spacing: -0.408px;
 }
 
-/* input range between */
-.range-group .slider-container {
+
+/* input double range */
+
+.double_range_slider_box {
   position: relative;
-  width: 300px;
-  height: 30px;
-  margin: 20px auto;
+  width: 100%;
+  margin: 1rem 0;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
 }
 
-.range-group .slider-container input[type="range"] {
+.double_range_slider {
+  width: 100%;
+  height: 10px;
+  position: relative;
+  background-color: #dddddd;
+  border-radius: 20px;
+}
+.double_range_slider_box .range_track {
+  height: 100%;
+  position: absolute;
+  border-radius: 20px;
+  background-color: #C3E4FD;
+}
+
+.double_range_slider_box input {
   position: absolute;
   width: 100%;
-  height: 8px;
-  background: transparent;
-  pointer-events: none; /* Hide the slider tracks */
-  -webkit-appearance: none;
-  appearance: none;
-}
-
-.range-group .slider-container input[type="range"]::-webkit-slider-runnable-track {
-  background: transparent;
-}
-
-.range-group .slider-container input[type="range"]::-moz-range-track {
-  background: red;
-}
-
-.range-group .slider-container input[type="range"]::-ms-track {
-  background: #747474;
-  border: none;
-}
-
-.range-group .slider-container input[type="range"]::-webkit-slider-thumb {
-  pointer-events: all;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #007bff;
-  cursor: pointer;
-  -webkit-appearance: none;
-  appearance: none;
-}
-
-.range-group .slider-container input[type="range"]::-moz-range-thumb {
-  pointer-events: all;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #007bff;
-  cursor: pointer;
-}
-
-.range-group .slider-container input[type="range"]::-ms-thumb {
-  pointer-events: all;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #007bff;
-  cursor: pointer;
-}
-
-.range-bar {
-  position: absolute;
-  top: 10px;
-  height: 8px;
-  background: #007bff;
-  z-index: 0;
+  height: 5px;
+  background: none;
   pointer-events: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.double_range_slider_box input::-webkit-slider-thumb {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  border: 3px solid #0D99FF;
+  background-color: #0D99FF;
+  pointer-events: auto;
+  -webkit-appearance: none;
+  cursor: pointer;
+  margin-bottom: 1px;
+}
+.double_range_slider_box input::-moz-range-thumb {
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  border: 3px solid #0D99FF;
+  background-color: #0D99FF;
+  pointer-events: auto;
+  -moz-appearance: none;
+  cursor: pointer;
+  margin-top: 30%;
 }
 
-.output {
-  text-align: center;
-  font-size: 18px;
+.minvalue,
+.maxvalue {
+  padding: 6px 15px;
+  border-radius: 1rem;
+  font-size: 1rem;
 }
+
+
 /* -----------------------------
  Filter Model Poupup ends
 ------------------------------*/
