--- a/css/calander.css
+++ b/css/calander.css
@@ -1,3 +1,12 @@
+.bb {
+  border-bottom: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+}
+.divider {
+  height: 1px;
+  width: 100%;
+  background: #F1F1F1;
+}
+
 .calander-main {
   width: 100%;
   overflow-x: hidden;
@@ -166,7 +175,7 @@ letter-spacing: -0.08px;
 
 }
 
-.years-button-active {
+.years-button.active {
   border-radius: 13px;
 background: var(--Primary-Primary-50, #0D99FF) !important;
 color: white !important;
@@ -300,5 +309,23 @@ letter-spacing: -0.078px;
   width: .5px;
   height: 16px;
   background: #E7E7E7;
+}
+
+.select-your-date {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  display: none;
+}
+
+.select-your-date-header {
+  display: flex;
+  padding: 24px 48px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
 }
 
