--- a/css/listing-map.css
+++ b/css/listing-map.css
@@ -268,6 +268,10 @@ listing map mobile wersion
  font-weight: 600;
  z-index: 9999 !important;
 }
+.highlight .icon {
+  background-color: #000000;
+  color: white;
+}
 .yNHHyP-marker-view:hover {z-index: 2 !important;}
 
 /* 29-6-24 changes ends */
