--- a/css/calander.css
+++ b/css/calander.css
@@ -1,6 +1,7 @@
 .bb {
   border-bottom: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
 }
+
 .divider {
   height: 1px;
   width: 100%;
@@ -15,9 +16,9 @@
 .dsbl-dts {
   cursor: not-allowed;
   color: #DDD;
-font-size: 16px;
-font-weight: 400;
-text-decoration: line-through;
+  font-size: 16px;
+  font-weight: 400;
+  text-decoration: line-through;
 }
 
 .d-m-y {
@@ -50,35 +51,38 @@ text-decoration: line-through;
 
   /*font*/
   color: var(--Foundation-black-black-500, #111);
-font-family: "DM Sans";
-font-size: 18px;
-font-style: normal;
-font-weight: 500;
-line-height: 25.2px; /* 140% */
+  font-family: "DM Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 25.2px;
+  /* 140% */
 }
 
 .calander-weeks {
   display: grid;
-  grid-template-columns: repeat(7 ,  1fr);
+  grid-template-columns: repeat(7, 1fr);
   grid-auto-rows: 52px;
   /* font*/
   color: var(--BLACK, #444);
-font-family: "DM Sans";
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 22.4px; /* 140% */
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22.4px;
+  /* 140% */
 }
 
 .calander-weeks p {
-   width: 48px;
-   height: 48px;
-   margin: 0 !important; 
-   padding: 0 !important;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+  width: 48px;
+  height: 48px;
+  margin: 0 !important;
+  padding: 0 !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .calander-weeks div {
   margin-bottom: .2rem;
 }
@@ -88,13 +92,14 @@ line-height: 22.4px; /* 140% */
   display: grid;
   grid-template-columns: repeat(7, 1fr);
 
-/*font*/
-color: var(--BLACK, #444);
-font-family: "DM Sans";
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 22.4px; /* 140% */
+  /*font*/
+  color: var(--BLACK, #444);
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22.4px;
+  /* 140% */
 }
 
 
@@ -112,9 +117,9 @@ line-height: 22.4px; /* 140% */
 }
 
 .content {
-  display: none ;
+  display: none;
 
-min-height: 400px;
+  min-height: 400px;
 }
 
 .content.active {
@@ -147,49 +152,52 @@ min-height: 400px;
 
 .duration-font {
   color: var(--Foundation-black-black-500, #111);
-font-family: "DM Sans";
-font-size: 18px;
-font-style: normal;
-font-weight: 500;
-line-height: 25.2px; /* 140% */
-letter-spacing: -0.252px;
+  font-family: "DM Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 25.2px;
+  /* 140% */
+  letter-spacing: -0.252px;
 }
 
 
-.years-button{
+.years-button {
   display: flex;
-padding: 8px 24px;
-align-items: center;
-gap: 8px;
-border-radius: 13px;
-border: 1px solid #E7E7E7;
-background: inherit;
+  padding: 8px 24px;
+  align-items: center;
+  gap: 8px;
+  border-radius: 13px;
+  border: 1px solid #E7E7E7;
+  background: inherit;
 
-color: var(--GREY, #747474);
-font-family: "DM Sans";
-font-size: 14px;
-font-style: normal;
-font-weight: 700;
-line-height: 26px; /* 185.714% */
-letter-spacing: -0.08px;
+  color: var(--GREY, #747474);
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 26px;
+  /* 185.714% */
+  letter-spacing: -0.08px;
 
 }
 
 .years-button.active {
   border-radius: 13px;
-background: var(--Primary-Primary-50, #0D99FF) !important;
-color: white !important;
+  background: var(--Primary-Primary-50, #0D99FF) !important;
+  color: white !important;
 }
 
 
 .calander-font-1 {
   color: var(--Grayscale-Gray-80, #4B4B4D);
-font-family: "DM Sans";
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 18px; /* 112.5% */
-letter-spacing: -0.078px;
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  /* 112.5% */
+  letter-spacing: -0.078px;
 }
 
 
@@ -198,16 +206,18 @@ letter-spacing: -0.078px;
 }
 
 .selected-range-start {
-   border-radius: 50% 0 0 50%;
+  border-radius: 50% 0 0 50%;
 }
+
 .selected-range-endes {
   border-radius: 0 50% 50% 0;
 }
-.selected-range-start p, 
+
+.selected-range-start p,
 .selected-range-endes p {
-   border-radius: 50%;
-   background-color: #0D99FF;
-   color: white;
+  border-radius: 50%;
+  background-color: #0D99FF;
+  color: white;
 }
 
 
@@ -327,5 +337,45 @@ letter-spacing: -0.078px;
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
+}
+
+.year-search {
+  position: relative;
+}
+.year-search input {
+  width: 250px !important;
+}
+
+.year-search-sugessions {
+position: absolute;
+top: 101%;
+display: none;
+width: 233px;
+padding: 16px 24px;
+flex-direction: column;
+align-items: flex-start;
+gap: 16px;
+border-radius: 16px;
+border: 1px solid #E7E7E7;
+background: #FFF;
+/* Elevation */
+box-shadow: 0px 20px 70px 0px rgba(194, 194, 194, 0.10);
+}
+.year-search-sugessions.active{display: flex;}
+#dropdownInput:focus + .year-search-sugessions {display: flex;}
+
+.year-search-sugessions li {
+display: flex;
+padding: 12px 0px;
+align-items: center;
+gap: 16px;
+align-self: stretch;
+color: var(--Grayscale-Gray-80, #4B4B4D);
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 22px; /* 157.143% */
+letter-spacing: -0.12px;
+border-bottom: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
 }
 
