--- a/css/listing-map.css
+++ b/css/listing-map.css
@@ -285,6 +285,24 @@ listing map mobile wersion
   top: 102%;
 }
 
+.map-cls-btn {
+  position: absolute;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  z-index: 1;
+  right: 2%;
+  top: 2%;
+}
+.map-card a {
+   text-decoration: none;
+}
+
 .property .address {
   color: #9E9E9E;
   font-size: 10px;
