--- a/css/homepage.css
+++ b/css/homepage.css
@@ -420,6 +420,8 @@
     display: block;
     z-index: 1;
     border-radius: 2rem;
+    border: none;
+    background: transparent;
     position: absolute !important;
     top: 0;
     left: 0;
