--- a/responsivedatepicker2/accordion.css
+++ b/responsivedatepicker2/accordion.css
@@ -107,6 +107,12 @@
     margin: 2px 0px;
     background: white;
     border-bottom: .2px solid rgba(128, 128, 128, 0.3);
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+.addlocationncontainerchild1:last-child {
+    border-bottom: none;
 }
 
 .inputcontainer {
