--- a/css/listing-map.css
+++ b/css/listing-map.css
@@ -282,7 +282,9 @@ listing map mobile wersion
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
   background-color: white;
   position: absolute;
-  top: 102%;
+  top: 120%;
+  border-radius: 16px;
+  width: 272px;
 }
 
 .map-cls-btn {
