--- a/responsivedatepicker2/accordion.css
+++ b/responsivedatepicker2/accordion.css
@@ -91,25 +91,27 @@
 }
 
 .addlocationncontainerchild {
-    margin: 10px 0px;
-    /* border: 1px solid ;  */
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
-    padding: 1rem;
-    border-radius: 1rem;
-
+display: flex;
+padding: 12.4px 0px;
+flex-direction: column;
+align-items: flex-start;
+/* position: absolute;
+right: 0px;
+bottom: -270.875px; */
+border-radius: 24px;
+border: 0.775px solid #E7E7E7;
+background: #FFF;
+box-shadow: 0px 15.5px 54.25px 0px rgba(194, 194, 194, 0.10);
 }
 
 .addlocationncontainerchild1 {
-    margin: 10px 0px;
-    padding: 1rem;
-    width: 100%;
-    /* border: 1px solid; */
-    margin: 2px 0px;
-    background: white;
-    border-bottom: .2px solid rgba(128, 128, 128, 0.3);
     display: flex;
+    width: 100%;
+    padding: 6.2px 18.6px;
     align-items: center;
-    gap: .5rem;
+    gap: 9.3px;
+    background: #FFF;
+    border-bottom: 1px solid var(--Grayscale-Gray-40, rgba(172, 172, 176, 0.24));
 }
 .addlocationncontainerchild1:last-child {
     border-bottom: none;
