--- a/responsivedatepicker2/month.css
+++ b/responsivedatepicker2/month.css
@@ -1,7 +1,4 @@
-
-
-
-.progessbarsection{
+.progessbarsection {
     /* border: 1px solid; */
     text-align: center;
     display: flex;
@@ -10,7 +7,7 @@
     align-items: center;
 }
 
-.topmonthcontainer{
+.topmonthcontainer {
     background-color: white;
     border-radius: 6px;
     width: 60%;
@@ -27,7 +24,7 @@
  
 } */
 
-.container1 > div {
+.container1>div {
     margin-bottom: 15px;
 }
 
@@ -61,33 +58,40 @@
 
 /* Custom modal */
 .custom-modal {
-    display: none; /* Hidden by default */
+    display: none;
+    /* Hidden by default */
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; /* Enable scrolling if needed */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    overflow: auto;
+    /* Enable scrolling if needed */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
 }
-#calendar{
+
+#calendar {
     display: flex;
     width: 100%;
     justify-content: space-between;
     margin: 1rem 0px;
 }
-@media screen and (max-width:1078px){
-    #calendar{
+
+@media screen and (max-width:1078px) {
+    #calendar {
         flex-direction: column;
-    }  
+    }
 }
+
 .custom-modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 60%; /* Could be more or less, depending on screen size */
+    width: 60%;
+    /* Could be more or less, depending on screen size */
     /* max-width: 400px; */
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -100,6 +104,7 @@
     font-weight: bold;
     cursor: pointer;
 }
+
 .custom-modal-close1 {
     color: #aaa;
     float: right;
@@ -118,7 +123,7 @@
 .calendar-table {
     width: 100%;
     border-collapse: collapse;
-    border-spacing: 0px  !important;
+    border-spacing: 0px !important;
 }
 
 /* .calendar-table th,
@@ -134,6 +139,15 @@
 
 .calendar-day {
     cursor: pointer;
+    width: 46px;
+    height:46px;
+    gap: 10px;
+    opacity: 0px;
+font-size: 16px;
+font-weight: 400;
+line-height: 22.4px;
+text-align: left;
+color: #444444;
 }
 
 .calendar-day:hover {
@@ -144,8 +158,15 @@
     background-color: #0D99FF;
     color: white;
 }
+
 .calendar-day-year {
-    cursor: pointer;
+cursor: pointer;
+color: var(--BLACK, #444);
+font-family: "DM Sans";
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 22.4px; /* 140% */
 }
 
 .calendar-day-year:hover {
@@ -156,23 +177,31 @@
     background-color: #0D99FF;
     color: white;
 }
-#apply-date{
+
+#apply-date {
     background-color: #0D99FF;
     color: white;
     /* width: 100%; */
 }
 
-#prev-month{
+#prev-month {
     border: none;
     color: #cdcdcd;
 }
-#next-month{
+
+#next-month {
     border: none;
     color: #cdcdcd;
 }
 
 td.disabled {
-    background-color: #f0f0f0;
-    color: #ccc;
+    color: #DDD !important;
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22.4px;
+    /* 140% */
+    text-decoration: line-through;
     cursor: not-allowed;
 }
