--- a/responsivedatepicker2/styles.css
+++ b/responsivedatepicker2/styles.css
@@ -24,26 +24,32 @@ table {
     overflow-y: scroll;
     height: 300px;
 }
+
+
 .navbarcotainers{
-    width: 85%;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    /* border: 1px solid red; */
-    background-color: #f0f0f0;
-    border-radius: 2rem;
+padding: 4px;
+justify-content: center;
+align-items: flex-start;
+align-self: stretch;
+border-radius: 200px;
+background: #F7F7F7;
 }
 .navbuttons{
-    /* border: 1px solid gray; */
-    text-align: center;
-    border-radius: 2rem !important;
-    padding: 6px 2rem;
-    margin: 4px !important;
-    color: gray !important;
+    display: flex;
+    height: 100%;
+    padding: 0px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
+    border-radius: 2000px;
+    flex-grow: 1;
+    color: var(--GREY, #747474);
 }
+.navbuttons.active,
 .navbuttons:hover{
-background-color: aqua Im !important;
+ background: #FFF;
+color: var(--BLACK, #444);
 }
 
 .daysection{
@@ -126,14 +132,18 @@ td button{
     background-color: skyblue;
     color: white;
     border-radius: 6px;
-
 }
 .dmbutton:hover{
     cursor: pointer;
 }
-#datePicker button.disabled {
-    background-color: #f0f0f0;
-    color: #ccc;
+ button.disabled{
+    color: #DDD !important;
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22.4px; /* 140% */
+    text-decoration: line-through;
     cursor: not-allowed;
 }
 
@@ -310,4 +320,21 @@ td button{
 }
 #incrementinmonth{
     border-radius: 50%;
+}
+
+
+.mobile-cal-footer {
+    display: flex;
+    justify-content: space-between;
+    padding: .5rem;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    border-top: 1px solid #ACACB03D
+}
+
+.mobile-cal-footer button {
+    width: fit-content;
 }
