--- a/responsivedatepicker2/styles.css
+++ b/responsivedatepicker2/styles.css
@@ -332,7 +332,7 @@ td button{
     left: 0;
     right: 0;
     background-color: white;
-    border-top: 1px solid #ACACB03D
+    border-top: 1px solid #ACACB03D;
 }
 
 .mobile-cal-footer button {
