--- a/responsivedatepicker2/accordion.css
+++ b/responsivedatepicker2/accordion.css
@@ -80,6 +80,7 @@
     padding: 1rem;
     background: #e9ecef0f;
     height: auto;
+    position: relative;
 }
 
 .searchbox {
@@ -96,25 +97,54 @@ padding: 12.4px 0px;
 flex-direction: column;
 align-items: flex-start;
 /* position: absolute;
-right: 0px;
-bottom: -270.875px; */
-border-radius: 24px;
+top: 100%;*/
+border-radius: 24px; 
 border: 0.775px solid #E7E7E7;
 background: #FFF;
+overflow: hidden;
 box-shadow: 0px 15.5px 54.25px 0px rgba(194, 194, 194, 0.10);
 }
 
 .addlocationncontainerchild1 {
-    display: flex;
-    width: 100%;
-    padding: 6.2px 18.6px;
-    align-items: center;
-    gap: 9.3px;
-    background: #FFF;
-    border-bottom: 1px solid var(--Grayscale-Gray-40, rgba(172, 172, 176, 0.24));
+display: flex;
+width: 100%;
+padding: 6.2px 18.6px;
+align-items: center;
+gap: 9.3px;
+background: var(--White-White-100, #FFF);
 }
 .addlocationncontainerchild1:last-child {
     border-bottom: none;
+}
+
+.location-icon {
+display: flex;
+width: 37.2px;
+height: 37.2px;
+justify-content: center;
+align-items: center;
+gap: 6.526px;
+flex-shrink: 0;
+border-radius: 1305.263px;
+border: 0.653px solid #E7E7E7;
+background: #FAFAFA;
+}
+.addlocationncontainerchild1 p {
+color: var(--Grayscale-Gray-80, #4B4B4D);
+font-family: "DM Sans";
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 17.05px; /* 142.083% */
+letter-spacing: -0.093px;
+display: flex;
+width: 100%;
+height: 37.2px;
+padding: 6.2px 0px;
+align-items: center;
+gap: 7.75px;
+align-self: stretch;
+border-bottom: 1px solid var(--Grayscale-Gray-40, rgba(172, 172, 176, 0.24));
 }
 
 .inputcontainer {
